--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
     <script type="text/jsx" src="spaceSwitcher.js"></script>
+    <style>
+        .active {
+            background-color: #e7e7e7;
+        }
+    </style>
 </head>
 <body>
 <div class="app">
